--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite": "^6.1.0"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "^4.3.4"
+    "@vitejs/plugin-react": "^4.3.4",
+    "wavesurfer.js": "^7.9.1"
   }
 }
