--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "datatables.net": "^2.2.2",
     "datatables.net-dt": "^2.2.2",
+    "imask": "^7.6.1",
     "wavesurfer.js": "^7.9.1"
   }
 }
